# blackjack

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindGLEW.cmake  Findglfw3.cmake  Findsoil.cmake
include/: Blackjack.hpp  Card.hpp  Context.hpp  Deck.hpp  FontCache.hpp  GLProgram.hpp  Image.hpp  Menu.hpp  Text.hpp  Texture.hpp  VisualCard.hpp  cards.hpp  shaders.hpp  text.vs  texture.vs  tween.hpp
include/GL/: Context.hpp  Drawable.hpp  Font.hpp  GLProgram.hpp  Hexic.hpp  Image.hpp  KeyMonitor.hpp  Shader.hpp  Text.hpp  Transforms.hpp  basic.fs  basic.vs  shaders.hpp  text.fs  texture.fs
include/GUI/: Element.hpp  HexicImageButton.hpp  ImageButton.hpp  TextImageButton.hpp
include/STATE/: Game.hpp  Gamestate.hpp  Menu.hpp
scripts/: linux_soil.sh  w2.sh  windows_dependencies.bat
src/: Blackjack.cpp  Context.cpp  Font.cpp  GLProgram.cpp  Image.cpp  Menu.cpp  Shader.cpp  Text.cpp  Texture.cpp  VisualCard.cpp  main.cpp
src/GL/: Context.cpp  Font.cpp  GLProgram.cpp  Hexic.cpp  Image.cpp  KeyMonitor.cpp  Shader.cpp  Text.cpp  Texture.cpp
src/STATE/: Game.cpp  Menu.cpp
